[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.35.0",
    "google-generativeai>=0.8.5",
    "img2pdf>=0.6.1",
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
    "playwright>=1.55.0",
    "plotly>=6.3.0",
    "streamlit[pdf]>=1.49.1",
    "yt-dlp>=2025.9.5",
    "numba>=0.55",
    "redis>=6.4.0",
    "celery>=5.5.3",
]
